<resources>
    <string name="app_name">M3H</string>
    <string name="title_activity_navigation__menu">Navigation_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_video">Videos</string>
    <string name="menu_fm">FM</string>
    <string name="menu_live_tv">Live TV</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_calling">Calling</string>
    <string name="menu_news">News</string>
    <string name="menu_logout">Logout</string>
</resources>
