<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_myProfile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_music"
            android:title="@string/menu_songs" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_fm"
            android:icon="@drawable/ic_fm"
            android:title="@string/menu_fm" />
        <item
            android:id="@+id/nav_live_tv"
            android:icon="@drawable/ic_live_tv"
            android:title="@string/menu_live_tv" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_calling"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_calling" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>



</menu>
